src/skemator.parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Lenguaje: peg$parseLenguaje },
      peg$startRuleFunction  = peg$parseLenguaje,

      peg$c0 = function(d) {return d},
      peg$c1 = "#T2B",
      peg$c2 = peg$literalExpectation("#T2B", false),
      peg$c3 = function() {setOption("graph.direction", "TD")},
      peg$c4 = "#B2T",
      peg$c5 = peg$literalExpectation("#B2T", false),
      peg$c6 = function() {setOption("graph.direction", "BT")},
      peg$c7 = "#L2R",
      peg$c8 = peg$literalExpectation("#L2R", false),
      peg$c9 = function() {setOption("graph.direction", "LR")},
      peg$c10 = "#R2L",
      peg$c11 = peg$literalExpectation("#R2L", false),
      peg$c12 = function() {setOption("graph.direction", "RL")},
      peg$c13 = function(s) {return {mmd:toMermaid(s),ast:s}},
      peg$c14 = function(s) {return {...s, ...(s.tipoSentencia==="relacion" ? {} : {padre:findParentAndAdd(s)})}},
      peg$c15 = function(t, n) {return {tipoSentencia:"nodo",...n,...t}},
      peg$c16 = function(a, u, n) {return {...n, ...{alineadoNodo:a?a:null},...{unico:u?true:false}}},
      peg$c17 = "*",
      peg$c18 = peg$literalExpectation("*", false),
      peg$c19 = "<",
      peg$c20 = peg$literalExpectation("<", false),
      peg$c21 = ">",
      peg$c22 = peg$literalExpectation(">", false),
      peg$c23 = peg$anyExpectation(),
      peg$c24 = function(n, v) {return {tipoNodo:"<>",nombreNodo:n.map(ni => ni[1]).join(""), ...(v?v:{volcadoNodo:null})}},
      peg$c25 = "[",
      peg$c26 = peg$literalExpectation("[", false),
      peg$c27 = "]",
      peg$c28 = peg$literalExpectation("]", false),
      peg$c29 = function(n, v) {return {tipoNodo:"[]",nombreNodo:n.map(ni => ni[1]).join(""), ...(v?v:{volcadoNodo:null})}},
      peg$c30 = "{",
      peg$c31 = peg$literalExpectation("{", false),
      peg$c32 = "}",
      peg$c33 = peg$literalExpectation("}", false),
      peg$c34 = function(n, v) {return {tipoNodo:"{}",nombreNodo:n.map(ni => ni[1]).join(""), ...(v?v:{volcadoNodo:null})}},
      peg$c35 = "(",
      peg$c36 = peg$literalExpectation("(", false),
      peg$c37 = ")",
      peg$c38 = peg$literalExpectation(")", false),
      peg$c39 = function(n, v) {return {tipoNodo:"()",nombreNodo:n.map(ni => ni[1]).join(""), ...(v?v:{volcadoNodo:null})}},
      peg$c40 = "((",
      peg$c41 = peg$literalExpectation("((", false),
      peg$c42 = "))",
      peg$c43 = peg$literalExpectation("))", false),
      peg$c44 = function(n, v) {return {tipoNodo:"(())",nombreNodo:n.map(ni => ni[1]).join(""), ...(v?v:{volcadoNodo:null})}},
      peg$c45 = "@",
      peg$c46 = peg$literalExpectation("@", false),
      peg$c47 = function(n) {return {tipoNodo:"@",nombre:text().substr(1),volcadoNodo:n}},
      peg$c48 = "=",
      peg$c49 = peg$literalExpectation("=", false),
      peg$c50 = function(v) {return {volcadoNodo:v}},
      peg$c51 = /^[A-Za-z0-9_$]/,
      peg$c52 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_", "$"], false, false),
      peg$c53 = function() {return text()},
      peg$c54 = function(a) {return {...a}},
      peg$c55 = "==>",
      peg$c56 = peg$literalExpectation("==>", false),
      peg$c57 = function(t) {return {tipoRelacion:t,mensajeRelacion:null}},
      peg$c58 = "-->",
      peg$c59 = peg$literalExpectation("-->", false),
      peg$c60 = "---",
      peg$c61 = peg$literalExpectation("---", false),
      peg$c62 = ".->",
      peg$c63 = peg$literalExpectation(".->", false),
      peg$c64 = "--",
      peg$c65 = peg$literalExpectation("--", false),
      peg$c66 = function(m, t) {return {tipoRelacion:t,mensajeRelacion:m}},
      peg$c67 = "\n",
      peg$c68 = peg$literalExpectation("\n", false),
      peg$c69 = function() {return text().trim()},
      peg$c70 = function(n, a, n2) {return {tipoSentencia:"relacion",alineadoNodo:a,nodoOrigen:n,nodoDestino:n2}},
      peg$c71 = " ",
      peg$c72 = peg$literalExpectation(" ", false),
      peg$c73 = function() {return {tabulacion:text().length}},
      peg$c74 = /^[\r\t ]/,
      peg$c75 = peg$classExpectation(["\r", "\t", " "], false, false),
      peg$c76 = /^[\n\r\t ]/,
      peg$c77 = peg$classExpectation(["\n", "\r", "\t", " "], false, false),
      peg$c78 = "\r\n",
      peg$c79 = peg$literalExpectation("\r\n", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseLenguaje() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parse__();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parse__();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = peg$parseOpciones();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseFin_de_sentencia();
        if (s4 !== peg$FAILED) {
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseDiagrama();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parse__();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parse__();
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseOpciones() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c3();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c4) {
        s1 = peg$c4;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c6();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 4) === peg$c7) {
          s1 = peg$c7;
          peg$currPos += 4;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c9();
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.substr(peg$currPos, 4) === peg$c10) {
            s1 = peg$c10;
            peg$currPos += 4;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c11); }
          }
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c12();
          }
          s0 = s1;
        }
      }
    }

    return s0;
  }

  function peg$parseDiagrama() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseBloque();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c13(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseBloque() {
    var s0, s1;

    s0 = [];
    s1 = peg$parseSentencia_completa();
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$parseSentencia_completa();
    }

    return s0;
  }

  function peg$parseSentencia_completa() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseSentencia();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseFin_de_sentencia();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c14(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSentencia() {
    var s0;

    s0 = peg$parseSentencia_relacion();
    if (s0 === peg$FAILED) {
      s0 = peg$parseSentencia_nodo();
    }

    return s0;
  }

  function peg$parseSentencia_nodo() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseTabulacion();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSentencia_nodo_contenido();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c15(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSentencia_nodo_contenido() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseAlineado_de_nodo();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseUnicidad_de_nodo();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseNodos_por_tipo();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c16(s1, s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseUnicidad_de_nodo() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 42) {
      s0 = peg$c17;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c18); }
    }

    return s0;
  }

  function peg$parseNodos_por_tipo() {
    var s0;

    s0 = peg$parseNodo_tipo_1();
    if (s0 === peg$FAILED) {
      s0 = peg$parseNodo_tipo_2();
      if (s0 === peg$FAILED) {
        s0 = peg$parseNodo_tipo_3();
        if (s0 === peg$FAILED) {
          s0 = peg$parseNodo_tipo_4();
          if (s0 === peg$FAILED) {
            s0 = peg$parseNodo_tipo_5();
            if (s0 === peg$FAILED) {
              s0 = peg$parseNodo_tipo_6();
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseNodo_tipo_1() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 60) {
      s1 = peg$c19;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c20); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parse_();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parse_();
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$currPos;
        peg$silentFails++;
        s6 = peg$currPos;
        s7 = [];
        s8 = peg$parse_();
        while (s8 !== peg$FAILED) {
          s7.push(s8);
          s8 = peg$parse_();
        }
        if (s7 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 62) {
            s8 = peg$c21;
            peg$currPos++;
          } else {
            s8 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c22); }
          }
          if (s8 !== peg$FAILED) {
            s7 = [s7, s8];
            s6 = s7;
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
        } else {
          peg$currPos = s6;
          s6 = peg$FAILED;
        }
        peg$silentFails--;
        if (s6 === peg$FAILED) {
          s5 = void 0;
        } else {
          peg$currPos = s5;
          s5 = peg$FAILED;
        }
        if (s5 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s6 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c23); }
          }
          if (s6 !== peg$FAILED) {
            s5 = [s5, s6];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$currPos;
            peg$silentFails++;
            s6 = peg$currPos;
            s7 = [];
            s8 = peg$parse_();
            while (s8 !== peg$FAILED) {
              s7.push(s8);
              s8 = peg$parse_();
            }
            if (s7 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 62) {
                s8 = peg$c21;
                peg$currPos++;
              } else {
                s8 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c22); }
              }
              if (s8 !== peg$FAILED) {
                s7 = [s7, s8];
                s6 = s7;
              } else {
                peg$currPos = s6;
                s6 = peg$FAILED;
              }
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
            peg$silentFails--;
            if (s6 === peg$FAILED) {
              s5 = void 0;
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
            if (s5 !== peg$FAILED) {
              if (input.length > peg$currPos) {
                s6 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c23); }
              }
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
        } else {
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parse_();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parse_();
          }
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 62) {
              s5 = peg$c21;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c22); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseVolcado_de_nodo();
              if (s6 === peg$FAILED) {
                s6 = null;
              }
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c24(s3, s6);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNodo_tipo_2() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;
